<resources>
	<string name="app_name">高應美食通</string>
	<string name="star_war_title">kuas\nfood</string>

	<string name="all_foods">所有美食</string>
	<string name="open_source">開放原始碼授權</string>
	<string name="hint_bubble">轉動輪盤發現食物</string>
	<string name="hint_bubble_click">點擊決定食物</string>

	<string name="permission_request_access_fine_location_denied_title">判斷座標</string>
	<string name="permission_request_access_fine_location_denied_message">高應美食通需要座標判斷校區。前往設定
		>「權限」，開啟「位置」選項。</string>
	<string name="go_to_settings">前往設定</string>
	<string name="permission_request_fail">無法取得權限</string>
	<string name="access_fine_location_denied_jiangong">沒有位置權限，將定位於建工校區。</string>
	<string name="access_fine_location_denied_yanchao">沒有位置權限，將定位於燕巢校區。</string>

	<string name="ok">好</string>
	<string name="cancel">取消</string>

	<string name="loading">載入中</string>
	<string name="something_error">發生錯誤</string>

	<string name="gps_not_open">請開啟定位服務，才能使用最完整的服務！</string>
	<string name="gps_not_open_jiangong">無法定位，將定位於建工校區。</string>
	<string name="gps_not_open_yanchao">無法定位，將定位於燕巢校區。</string>
	<string name="gps_not_work">無法定位座標</string>

	<string name="no_google_play_service">沒有 Google Play 服務，無法使用此 App。</string>

	<string name="desc">描述</string>
	<string name="address">地址</string>
	<string name="phone">電話</string>
	<string name="region">校區</string>
	<string name="time">營業時間</string>

	<string name="shop_phone">電話：%s</string>
	<string name="shop_time">營業時間：%s</string>
	<string name="shop_dis">%.2f 公里</string>
	<string name="shop_region">%s校區</string>

	<string name="db_init_error">初始化資料庫發生錯誤，請聯絡作者！</string>

	<string-array name="project">
		<item>KUAS Food</item>
		<item>Android</item>
		<item>Gson</item>
		<item>BubbleLayout</item>
		<item>KenBurnsView</item>
		<item>Universal Image Loader</item>
		<item>LitePal</item>
		<item>CursorWheelLayout</item>
		<item>StarWars.Android</item>
	</string-array>

	<string-array name="license">
		<item>https://github.com/hearsilent/KUAS-Food\n\nThe MIT License (MIT)\n\nCopyright &#169; 2016 HearSilent\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</item>
		<item>https://source.android.com\n\nCopyright &#169; 2006&#8211;2011 Android Open Source Project.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at:\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</item>
		<item>https://github.com/google/gson\n\nCopyright 2008 Google Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</item>
		<item>https://github.com/MasayukiSuda/BubbleLayout\n\nCopyright 2016 MasayukiSuda\n\nMIT License\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</item>
		<item>https://github.com/flavioarfaria/KenBurnsView\n\nCopyright 2016\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</item>
		<item>https://github.com/nostra13/Android-Universal-Image-Loader\n\nCopyright 2011&#8211;2015 Sergey Tarasevich\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n   http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</item>
		<item>https://github.com/LitePalFramework/LitePal\n\nCopyright &#169;  Tony Green, LitePal Framework Open Source Project\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n     http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</item>
		<item>https://github.com/BCsl/CursorWheelLayout\n\nCopyright 2014 Luke Deighton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</item>
		<item>https://github.com/Yalantis/StarWars.Android\n\nThe MIT License (MIT)\n\nCopyright &#169; 2015 Yalantis, https://yalantis.com\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</item>
	</string-array>

	<string name="lorem_title">Lorem ipsum</string>
	<string name="lorem_sentence">Lorem ipsum dolor sit amet.</string>
	<string name="lorem_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
	<string name="lorem_number">123</string>
</resources>
