<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".ShopDetailActivity"
	tools:ignore="RtlHardcoded">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/app_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fitsSystemWindows="true"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<android.support.design.widget.CollapsingToolbarLayout
			android:id="@+id/collapsing_toolbar"
			android:layout_width="match_parent"
			android:layout_height="226.5dp"
			android:fitsSystemWindows="true"
			app:contentScrim="?attr/colorPrimary"
			app:layout_scrollFlags="scroll|exitUntilCollapsed">

			<com.flaviofaria.kenburnsview.KenBurnsView
				android:id="@+id/imageView_header"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:contentDescription="@null"
				android:fitsSystemWindows="true"
				app:layout_collapseMode="parallax"
				app:layout_collapseParallaxMultiplier="0.7"/>

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:gravity="top"
				app:layout_collapseMode="pin"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
		</android.support.design.widget.CollapsingToolbarLayout>
	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:padding="@dimen/margin_small"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			card_view:cardCornerRadius="4dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/card_shops_detail_bg"
				android:divider="?android:attr/listDivider"
				android:orientation="vertical"
				android:paddingLeft="13dp"
				android:paddingRight="@dimen/margin_small"
				android:showDividers="middle">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="@dimen/margin_small">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/desc"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_title"
						android:textStyle="bold"/>

					<TextView
						android:id="@+id/textView_desc"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="@dimen/margin_small"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_body_1"
						tools:text="@string/lorem_paragraph"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="@dimen/margin_small">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/address"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_title"
						android:textStyle="bold"/>

					<TextView
						android:id="@+id/textView_address"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="@dimen/margin_small"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_body_1"
						tools:text="@string/lorem_paragraph"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="@dimen/margin_small">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/phone"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_title"
						android:textStyle="bold"/>

					<TextView
						android:id="@+id/textView_phone"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="@dimen/margin_small"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_body_1"
						tools:text="@string/lorem_paragraph"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="@dimen/margin_small">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/region"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_title"
						android:textStyle="bold"/>

					<TextView
						android:id="@+id/textView_region"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="@dimen/margin_small"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_body_1"
						tools:text="@string/lorem_paragraph"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="@dimen/margin_small">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/time"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_title"
						android:textStyle="bold"/>

					<TextView
						android:id="@+id/textView_time"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="@dimen/margin_small"
						android:textColor="@color/black_text"
						android:textSize="@dimen/text_body_1"
						tools:text="@string/lorem_paragraph"/>

				</LinearLayout>
			</LinearLayout>
		</android.support.v7.widget.CardView>
	</android.support.v4.widget.NestedScrollView>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/margin_medium"
		android:src="@drawable/ic_navigation_white_24dp"
		android:theme="@style/AppTheme.Fab"
		app:layout_behavior=".libs.ScrollAwareFABBehavior"/>
</android.support.design.widget.CoordinatorLayout>